# dpi-accelerator-beckn-onix

./: Dockerfile  entrypoint.sh  go.mod  go.sum
deploy/onix_installer/backend/: main.py  pyproject.toml  requirements.in  requirements.txt
deploy/onix_installer/backend/config/: app_config_generator.py  tf_config_generator.py
deploy/onix_installer/backend/core/: constants.py  models.py  utils.py
deploy/onix_installer/backend/installer_kit/installer_scripts/: create_service_account.sh  deploy-app.sh  deploy-infra.sh  destroy-infra.sh  install_preqreqs.sh  installer.sh
deploy/onix_installer/backend/installer_kit/installer_scripts/schema_loader/: init.sql  schema_loader.sh
deploy/onix_installer/backend/installer_kit/templates/configs/: adapter.yaml.j2  bapTxnCaller-routing.yaml.j2  bapTxnReceiver-routing.yaml.j2  bppTxnCaller-routing.yaml.j2  bppTxnReceiver-routing.yaml.j2  gateway.yaml.j2  registry-admin.yaml.j2  registry.yaml.j2  subscriber.yaml.j2
deploy/onix_installer/backend/installer_kit/templates/tf_configs/: p2.tfvars.j2  (+4 more)
deploy/onix_installer/backend/installer_kit/terraform/: main.tf  variable.tf
deploy/onix_installer/backend/services/: deployment_manager.py  gcp_resource_manager.py  health_checks.py  ui_state_manager.py
deploy/onix_installer/backend/tests/config_tests/: test_app_config_generator.py  test_tf_config_generator.py
deploy/onix_installer/backend/tests/core_tests/: test_utils.py
deploy/onix_installer/backend/tests/services_tests/: test_deployement_manager.py  test_gcp_resource_manager.py  test_health_checks.py  test_ui_state_manager.py
(+300 files in other folders)
