[project]
name = "onix-installer-backend"
version = "0.1.0"
description = "BECKN Onix Installer Backend"
authors = [
    {name = "DPI Accelerator Team",email = "noreply@google.com"}
]
requires-python = "^3.12"
dependencies = [
    "requests (==2.32.5)",
    "fastapi (==0.116.1)",
    "uvicorn (==0.28.1)",
    "jinja2 (==3.1.6)",
    "python-multipart (==0.0.20)",
    "pydantic (==2.12.4)",
    "httpx (==0.26.0)",
    "google-cloud-resource-manager (==1.3.3)",
    "setuptools (<82.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "coverage (>=7.13.4,<8.0.0)"
]
